--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "vars";
+@import "deafaut-elements";
 
 * {
   margin: 0;
@@ -1144,4 +1145,25 @@ body, html {
       }
     }
   }
+  &_gallery {
+    &_slider {
+      .carousel__slide {
+        width: 33%;
+        height: 281px;
+        overflow: hidden;
+        margin-right: 2%;
+        padding: 0;
+        img {
+          height: 100%;
+          width: 100%;
+          object-fit: contain;
+        }
+      }
+    }
+  }
+}
+
+.text-page {
+  padding-bottom: 100px;
+  padding-top: 100px;
 }
