--- a/src/news.ejs
+++ b/src/news.ejs
@@ -151,43 +151,43 @@
                 </div>
             </div>
         </div>
-        <div class="news_articles">
-            <div class="news_article">
+        <div class="news_articles carousel" id="articles">
+            <div class="news_article carousel__slide">
                 <div class="news_article_img">
                     <img src="./images/article.png" alt="news_article_img" />
                 </div>
                 <div class="news_article_date">19.11.2021</div>
                 <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
             </div>
-            <div class="news_article">
+            <div class="news_article carousel__slide">
                 <div class="news_article_img">
                     <img src="./images/article.png" alt="news_article_img" />
                 </div>
                 <div class="news_article_date">19.11.2021</div>
                 <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
             </div>
-            <div class="news_article">
+            <div class="news_article carousel__slide">
                 <div class="news_article_img">
                     <img src="./images/article.png" alt="news_article_img" />
                 </div>
                 <div class="news_article_date">19.11.2021</div>
                 <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
             </div>
-            <div class="news_article">
+            <div class="news_article carousel__slide">
                 <div class="news_article_img">
                     <img src="./images/article.png" alt="news_article_img" />
                 </div>
                 <div class="news_article_date">19.11.2021</div>
                 <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
             </div>
-            <div class="news_article">
+            <div class="news_article carousel__slide">
                 <div class="news_article_img">
                     <img src="./images/article.png" alt="news_article_img" />
                 </div>
                 <div class="news_article_date">19.11.2021</div>
                 <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
             </div>
-            <div class="news_article">
+            <div class="news_article carousel__slide">
                 <div class="news_article_img">
                     <img src="./images/article.png" alt="news_article_img" />
                 </div>
