--- a/src/index.scss
+++ b/src/index.scss
@@ -1167,3 +1167,41 @@ body, html {
   padding-bottom: 100px;
   padding-top: 100px;
 }
+
+.spoiler {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 24px;
+  border-radius: 10px;
+  padding: 9px 13px;
+  &_header {
+    font-family: Montserrat, serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 56px;
+    display: flex;
+    justify-content: space-between;
+    &_title {
+
+    }
+    &_arrow {
+      width: 26px;
+      img {
+        width: 100%;
+      }
+    }
+  }
+  &_content {
+    overflow: hidden;
+    height: 0px;
+    transition: 1s;
+    &--active {
+      height: auto;
+    }
+    iframe {
+      width: 100%;
+      border: none;
+      height: 700px;
+    }
+  }
+}
