--- a/src/index.ejs
+++ b/src/index.ejs
@@ -58,28 +58,34 @@
                     <div class="main-slider_announcements">
                         <div class="main-slider_announcements_title">АНОНСЫ</div>
                         <div class="main-slider_announcements_items carousel" id="announcements">
-                            <div class="main-slider_announcements_item carousel__slide">
-                                <div class="main-slider_announcements_item_date">
-                                    20.10.2021
-                                </div>
-                                <div class="main-slider_announcements_item_description">
-                                    Название анонса лучше в две строки, максимум в три
-                                </div>
-                            </div>
-                            <div class="main-slider_announcements_item carousel__slide">
-                                <div class="main-slider_announcements_item_date">
-                                    20.10.2021
-                                </div>
-                                <div class="main-slider_announcements_item_description">
-                                    Название анонса лучше в две строки, максимум в три
+                            <div class="carousel__slide">
+                                <div class="main-slider_announcements_item">
+                                    <div class="main-slider_announcements_item_date">
+                                        20.10.2021
+                                    </div>
+                                    <div class="main-slider_announcements_item_description">
+                                        Название анонса лучше в две строки
+                                    </div>
                                 </div>
                             </div>
-                            <div class="main-slider_announcements_item carousel__slide">
-                                <div class="main-slider_announcements_item_date">
-                                    20.10.2021
+                            <div class="carousel__slide">
+                                <div class="main-slider_announcements_item">
+                                    <div class="main-slider_announcements_item_date">
+                                        20.10.2021
+                                    </div>
+                                    <div class="main-slider_announcements_item_description">
+                                        Название анонса лучше в две строки, максимум в три
+                                    </div>
                                 </div>
-                                <div class="main-slider_announcements_item_description">
-                                    Название анонса лучше в две строки, максимум в три
+                            </div>
+                            <div class="carousel__slide">
+                                <div class="main-slider_announcements_item">
+                                    <div class="main-slider_announcements_item_date">
+                                        20.10.2021
+                                    </div>
+                                    <div class="main-slider_announcements_item_description">
+                                        Название анонса
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -155,47 +161,104 @@
                         </div>
                     </div>
                     <div class="news_articles carousel" id="articles">
-                        <div class="news_article carousel__slide">
-                            <div class="news_article_img">
-                                <img src="./images/article.png" alt="news_article_img" />
+                        <div class="carousel__slide">
+                            <div class="news_article">
+                                <div class="news_article_img">
+                                    <img src="./images/article.png" alt="news_article_img" />
+                                </div>
+                                <div>
+                                    <div class="news_article_date">19.11.2021</div>
+                                    <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
+                                </div>
                             </div>
-                            <div class="news_article_date">19.11.2021</div>
-                            <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
                         </div>
-                        <div class="news_article carousel__slide">
-                            <div class="news_article_img">
-                                <img src="./images/article.png" alt="news_article_img" />
+                        <div class="carousel__slide">
+                            <div class="news_article">
+                                <div class="news_article_img">
+                                    <img src="./images/article.png" alt="news_article_img" />
+                                </div>
+                                <div>
+                                    <div class="news_article_date">19.11.2021</div>
+                                    <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
+                                </div>
                             </div>
-                            <div class="news_article_date">19.11.2021</div>
-                            <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
                         </div>
-                        <div class="news_article carousel__slide">
-                            <div class="news_article_img">
-                                <img src="./images/article.png" alt="news_article_img" />
+                        <div class="carousel__slide">
+                            <div class="news_article">
+                                <div class="news_article_img">
+                                    <img src="./images/article.png" alt="news_article_img" />
+                                </div>
+                                <div>
+                                    <div class="news_article_date">19.11.2021</div>
+                                    <div class="news_article_text">миграцией в истории семьи</div>
+                                </div>
                             </div>
-                            <div class="news_article_date">19.11.2021</div>
-                            <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
                         </div>
-                        <div class="news_article carousel__slide">
-                            <div class="news_article_img">
-                                <img src="./images/article.png" alt="news_article_img" />
+                        <div class="carousel__slide">
+                            <div class="news_article">
+                                <div class="news_article_img">
+                                    <img src="./images/article.png" alt="news_article_img" />
+                                </div>
+                                <div>
+                                    <div class="news_article_date">19.11.2021</div>
+                                    <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
+                                </div>
                             </div>
-                            <div class="news_article_date">19.11.2021</div>
-                            <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
                         </div>
-                        <div class="news_article carousel__slide">
-                            <div class="news_article_img">
-                                <img src="./images/article.png" alt="news_article_img" />
+                        <div class="carousel__slide">
+                            <div class="news_article">
+                                <div class="news_article_img">
+                                    <img src="./images/article.png" alt="news_article_img" />
+                                </div>
+                                <div>
+                                    <div class="news_article_date">19.11.2021</div>
+                                    <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
+                                </div>
                             </div>
-                            <div class="news_article_date">19.11.2021</div>
-                            <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
                         </div>
-                        <div class="news_article carousel__slide">
-                            <div class="news_article_img">
-                                <img src="./images/article.png" alt="news_article_img" />
+                        <div class="carousel__slide">
+                            <div class="news_article">
+                                <div class="news_article_img">
+                                    <img src="./images/article.png" alt="news_article_img" />
+                                </div>
+                                <div>
+                                    <div class="news_article_date">19.11.2021</div>
+                                    <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
+                                </div>
                             </div>
-                            <div class="news_article_date">19.11.2021</div>
-                            <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
+                        </div>
+                        <div class="carousel__slide">
+                            <div class="news_article">
+                                <div class="news_article_img">
+                                    <img src="./images/article.png" alt="news_article_img" />
+                                </div>
+                                <div>
+                                    <div class="news_article_date">19.11.2021</div>
+                                    <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel__slide">
+                            <div class="news_article">
+                                <div class="news_article_img">
+                                    <img src="./images/article.png" alt="news_article_img" />
+                                </div>
+                                <div>
+                                    <div class="news_article_date">19.11.2021</div>
+                                    <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel__slide">
+                            <div class="news_article">
+                                <div class="news_article_img">
+                                    <img src="./images/article.png" alt="news_article_img" />
+                                </div>
+                                <div>
+                                    <div class="news_article_date">19.11.2021</div>
+                                    <div class="news_article_text">ИРО исследует, как реализуется комплекс мер, направленных на адаптацию детей с миграцией в истории семьи</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -219,7 +282,7 @@
                                     <img src="./images/Icon-about.png" alt="about_icon" />
                                 </div>
                                 <div class="about_slider_item_title">ОСНОВНЫЕ СВЕДЕНИЯ</div>
-                                <div class="about_slider_item_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit elit et, </div>
+                                <div class="about_slider_item_text">Lorem ipsum dolor sit amet, </div>
                             </div>
                             <div class="about_slider_item carousel__slide">
                                 <div class="about_slider_item_icon">
@@ -294,7 +357,7 @@
                     <div class="events_items">
                         <div class="events_item">
                             <div class="events_item_title">КОНКУРСЫ</div>
-                            <div class="events_item_description">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</div>
+                            <div class="events_item_description">Nemo enim ipsam voluptatem quia voluptas </div>
                         </div>
                         <div class="events_item">
                             <div class="events_item_title">КОНКУРСЫ</div>
@@ -316,16 +379,24 @@
                 <div class="partners_title">ПАРТНЁРЫ</div>
                 <div class="partners_slider">
                     <div class="carousel" id="partners-slider">
-                        <div class="partners_slider_slide carousel__slide"></div>
-                        <div class="partners_slider_slide carousel__slide"></div>
-                        <div class="partners_slider_slide carousel__slide"></div>
-                        <div class="partners_slider_slide carousel__slide"></div>
-                        <div class="partners_slider_slide carousel__slide"></div>
-                        <div class="partners_slider_slide carousel__slide"></div>
-                        <div class="partners_slider_slide carousel__slide"></div>
-                        <div class="partners_slider_slide carousel__slide"></div>
-                        <div class="partners_slider_slide carousel__slide"></div>
-                        <div class="partners_slider_slide carousel__slide"></div>
+                        <div class="partners_slider_slide carousel__slide">
+                            <a href="#"><img src="//yastatic.net/s3/web4static/_/v2/ILFmOIJ8woHVcXPynY5R8UCSfME.svg" alt="yandex" /></a>
+                        </div>
+                        <div class="partners_slider_slide carousel__slide">
+                            <a href="#"><img src="https://static-sl.insales.ru/r/N5MT35FUecI/fit/1920/1920/ce/1/plain/files/1/4891/15242011/original/Sberbank-icon.png@jpg" alt="yandex" /></a>
+                        </div>
+                        <div class="partners_slider_slide carousel__slide">
+                            <a href="#"><img src="https://img2.freepng.ru/20190209/cea/kisspng-itmo-university-masters-degree-education-doctorat-on-google-play-rev-5c5f8e2bb2fb58.1760224615497661877331.jpg" alt="yandex" /></a>
+                        </div>
+                        <div class="partners_slider_slide carousel__slide">
+                            <a href="#"><img src="//yastatic.net/s3/web4static/_/v2/ILFmOIJ8woHVcXPynY5R8UCSfME.svg" alt="yandex" /></a>
+                        </div>
+                        <div class="partners_slider_slide carousel__slide">
+                            <a href="#"><img src="//yastatic.net/s3/web4static/_/v2/ILFmOIJ8woHVcXPynY5R8UCSfME.svg" alt="yandex" /></a>
+                        </div>
+                        <div class="partners_slider_slide carousel__slide">
+                            <a href="#"><img src="//yastatic.net/s3/web4static/_/v2/ILFmOIJ8woHVcXPynY5R8UCSfME.svg" alt="yandex" /></a>
+                        </div>
                     </div>
                 </div>
             </section>
