--- a/src/text-page.ejs
+++ b/src/text-page.ejs
@@ -47,6 +47,17 @@
         </div>
     </section>
 
+    <div class="breadcrumbs">
+        <div class="wrapper">
+            <ul>
+                <li><a href="">Главная</a></li>
+                <li><a href="">Страница</a></li>
+                <li><a href="">Раздел</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </div>
+    </div>
+
     <section class="text-page">
         <div class="wrapper">
             <h1>ТЕКСТ №1</h1>
