--- a/src/deafaut-elements.scss
+++ b/src/deafaut-elements.scss
@@ -8,6 +8,9 @@ h1 {
   line-height: 59px;
   letter-spacing: 0.1em;
   color: $base-color;
+  @media screen and (max-width: 960px) {
+    font-size: 24px;
+  }
 }
 h2 {
   font-family: Montserrat, serif;
@@ -18,6 +21,9 @@ h2 {
   letter-spacing: 0.05em;
   color: $base-black;
   margin-bottom: 15px;
+  @media screen and (max-width: 960px) {
+    font-size: 18px;
+  }
 }
 h3 {
   font-family: Montserrat, serif;
@@ -28,13 +34,19 @@ h3 {
   letter-spacing: 0.05em;
   color: $base-black;
   margin-bottom: 15px;
+  @media screen and (max-width: 960px) {
+    font-size: 16px;
+  }
 }
 p {
   font-family: Montserrat, serif;
   font-style: normal;
   font-weight: 500;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 29px;
   color: $base-black;
   margin-bottom: 15px;
+  @media screen and (max-width: 960px) {
+    font-size: 14px;
+  }
 }
