--- a/src/index.scss
+++ b/src/index.scss
@@ -160,7 +160,7 @@ body, html {
     }
     &_title {
       font-weight: 600;
-      font-size: 36px;
+      font-size: 1.75em;
       line-height: 56px;
       display: flex;
       align-items: center;
@@ -181,7 +181,7 @@ body, html {
       }
       a {
         font-weight: 500;
-        font-size: 24px;
+        font-size: 1.25em;
         line-height: 106.5%;
         color: #4B4B4B;
         text-decoration: none;
@@ -223,7 +223,7 @@ body, html {
     p {
       margin-bottom: 22px;
       font-weight: 500;
-      font-size: 24px;
+      font-size: 1.25em;
       line-height: 24px;
       color: #4B4B4B;
     }
