--- a/src/index.ejs
+++ b/src/index.ejs
@@ -31,9 +31,10 @@
                     </div>
                     <div class="header_tools">
                         <div class="header_tools_item header_tools_item--eye">
-                            <a href="#">
+                            <a href="#" class="bvi-open">
                                 <img src="./images/eye.png" alt="eye" />
                             </a>
+                            <a href="#" class="bvi-open">Версия сайта для слабовидящих</a>
                         </div>
                         <div class="header_tools_item header_tools_item--search">
                             <a href="#">
@@ -466,7 +467,6 @@
                     </div>
                 </div>
             </footer>
-
         </div>
     </body>
 </html>
