--- a/src/news.ejs
+++ b/src/news.ejs
@@ -40,9 +40,9 @@
                         <img src="./images/search.png" alt="eye" />
                     </a>
                 </div>
-            </div>
-            <div class="header_toggle-menu" id="toggle-menu-btn">
-                <img src="./images/toggle-menu.png" alt="toggle-menu" />
+                <div class="header_tools_item header_tools_item--toggle-menu" id="toggle-menu-btn">
+                    <img src="./images/toggle-menu.png" alt="toggle-menu" />
+                </div>
             </div>
         </div>
     </section>
